force-app/main/default/objects/Temporary_Beat_Assignment__c/Temporary_Beat_Assignment__c.object-meta.xml
<CustomObject>
    <description>Temporary beat lending to cover absent user / group work (BRD 5.3).</description>
    <label>Temporary Beat Assignment</label>
    <nameField>
        <label>Temporary Beat Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Beat Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>