force-app/main/default/objects/Temporary_Beat_Assignment__c/fields/Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Temporary Beat Assignments (Assigned)</relationshipLabel>
    <relationshipName>Temp_Beat_Assignments_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>