force-app/main/default/objects/Temporary_Beat_Assignment__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Temporary Beat Assignments</relationshipLabel>
    <relationshipName>Temporary_Beat_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>