force-app/main/default/objects/Temporary_Beat_Assignment__c/fields/From_Employee__c.field-meta.xml
<CustomField>
    <fullName>From_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Temporary Beat Assignments</relationshipLabel>
    <relationshipName>Temporary_Beat_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>